fix(Navbar): overflow height when timer !== null

--- a/packages/app/modules/pomo/components/Session/index.css
+++ b/packages/app/modules/pomo/components/Session/index.css
@@ -1,7 +1,7 @@
 ._local {
 	:global {
 		.stage_wrap {
-			margin-bottom: 30px;
+			margin-bottom: 4.5vh;
 
 			.image_wrap {
 				top: 30px;
